from dataclasses import dataclass


@dataclass
class Texte:
    titre: str
    contenu: str
