---
query: update
references:
  - "File: /docs/diagramme_classe_UML_V4.mmd"
  - |+
    Reference: <skills>
    Here is a list of skills that contain domain specific knowledge on a variety of topics.
    Each skill comes with a description of the topic and a file path that contains the detailed instructions.
    When a user asks you to perform a task that falls within the domain of a skill, use the #tool:read/readFile tool to acquire the full instructions from the file URI.
    <skill>
    <name>project-setup-info-local</name>
    <description>Comprehensive setup steps to help the user create complete project structures in a VS Code workspace; this tool is designed for full project initialization and scaffolding, not for creating individual files. When to use this tool: user wants to create a new complete project from scratch; setting up entire project frameworks (TypeScript projects, React apps, Node.js servers, etc.); initializing Model Context Protocol (MCP) servers with full structure; creating VS Code extensions with proper scaffolding; setting up Next.js, Vite, or other framework-based projects; user asks for "new project", "create a workspace", "set up a [framework] project"; need to establish a complete development environment with dependencies, config files, and folder structure. When NOT to use this tool: creating single files or small code snippets; adding individual files to existing projects; making modifications to existing codebases; user asks to "create a file" or "add a component"; simple code examples or demonstrations; debugging </description>
    <file>c:\Users\cleme\.vscode\extensions\github.copilot-chat-0.48.1\assets\prompts\skills\project-setup-info-local\SKILL.md</file>
    </skill>
    <skill>
    <name>get-search-view-results</name>
    <description>Get the current search results from the Search view in VS Code</description>
    <file>c:\Users\cleme\.vscode\extensions\github.copilot-chat-0.48.1\assets\prompts\skills\get-search-view-results\SKILL.md</file>
    </skill>
    <skill>
    <name>agent-customization</name>
    <description>**WORKFLOW SKILL** — Create, update, review, fix, or debug VS Code agent customization files (.instructions.md, .prompt.md, .agent.md, SKILL.md, copilot-instructions.md, AGENTS.md). USE FOR: saving coding preferences; troubleshooting why instructions/skills/agents are ignored or not invoked; configuring applyTo patterns; defining tool restrictions; creating custom agent modes or specialized workflows; packaging domain knowledge; fixing YAML frontmatter syntax. DO NOT USE FOR: general coding questions (use default agent); runtime debugging or error diagnosis; MCP server configuration (use MCP docs directly); VS Code extension development. INVOKES: file system tools (read/write customization files), ask-questions tool (interview user for requirements), subagents for codebase exploration. FOR SINGLE OPERATIONS: For quick YAML frontmatter fixes or creating a single file from a known pattern, edit the file directly — no skill needed.</description>
    <file>c:\Users\cleme\.vscode\extensions\github.copilot-chat-0.48.1\assets\prompts\skills\agent-customization\SKILL.md</file>
    </skill>
    </skills>


    <agents>
    Here is a list of agents that can be used when running a subagent.
    Each agent has optionally a description with the agent's purpose and expertise. When asked to run a subagent, choose the most appropriate agent from this list.
    Use the #tool:agent/runSubagent tool with the agent name to run the subagent.
    <agent>
    <name>Explore</name>
    <description>Fast read-only codebase exploration and Q&A subagent. Prefer over manually chaining multiple search and file-reading operations to avoid cluttering the main conversation. Safe to call in parallel. Specify thoroughness: quick, medium, or thorough.</description>
    <argumentHint>Describe WHAT you're looking for and desired thoroughness (quick/medium/thorough)</argumentHint>
    </agent>
    </agents>

generationTime: 2026-05-19T09:23:29.450Z
---
classDiagram
    class Corpus {
        <<abstract>>
        +str nom
        +int occurrences
        +compter() void
    }

    class Personnage {
        +list[str] attributs
        +str|None genre
    }

    class Lieu {
        +str|None categorie
    }

    class Evenement {
        +str|None date
        +str|None heure
        +Lieu|None lieu
        +list[Personnage] participants
        +__str__() str
    }

    Corpus <|-- Personnage
    Corpus <|-- Lieu
    Corpus <|-- Evenement
    Evenement --> Lieu : lieu
    Evenement --> Personnage : participants

    class Texte {
        -_titre: str
        -_auteur: str
        -_annee: str
        +contenu: str
        +__str__() str
        +titre() str
        +auteur() str
        +annee() str
    }

    class ChargeurTexte {
        +charger(source: str) Texte
    }

    ChargeurTexte --> Texte : creates

    class AnalyseTexte {
        -personnages: list[Personnage]
        -lieux: list[Lieu]
        -evenements: list[Evenement]
        -_liste_noms_perso: list[str]
        -_liste_noms_lieux: list[str]
        +analyser(doc: Doc, min_occ: int) void
        -_ajouter_personnage(nom: str, doc: Doc) void
        -_ajouter_lieu(nom: str) void
        -_ajouter_events(doc: Doc) void
    }

    AnalyseTexte --> Personnage : creates
    AnalyseTexte --> Lieu : creates
    AnalyseTexte --> Evenement : creates

    class Exportateur {
        +exporter_personnages() void
        +exporter_lieux() void
        +exporter_evenements() void
        +exporter_json() void
    }

    class Pipeline {
        -source: str
        -_chargeur: ChargeurTexte
        -_finder: AnalyseTexte
        +executer() void
    }

    Pipeline --> ChargeurTexte
    Pipeline --> AnalyseTexte
    Pipeline --> Exportateur

    class Utils {
        +spacy_conv(texte: Texte) Doc
        +nettoyer(txt: str) str
        +patienter() void
    }

    class InstallateurSpacy {
        +install_spacy() void
    }

    class fonction_perso {
        +check_attribut(n: str, tok: Token, doc: Doc) str|None
        +trouver_attributs(nom: str, doc: Doc) list
        +trouver_genre(nom: str, doc: Doc) str|None
    }

    class fonctions_evenement {
        +trouver_date(texte: str) str|None
        +trouver_heure(texte: str) str|None
        +trouver_lieu(texte: str, liste_lieux: list[Lieu]) Lieu|None
        +trouver_participants(texte: str, liste_perso: list[Personnage]) list[Personnage]
    }

    AnalyseTexte ..> fonction_perso : uses
    AnalyseTexte ..> fonctions_evenement : uses
    Pipeline ..> Utils : uses
    Utils ..> InstallateurSpacy : depends on